! Fix alignment issue on slide toggle

--- a/packages/vapor/less/controls/slideToggle.less
+++ b/packages/vapor/less/controls/slideToggle.less
@@ -54,7 +54,7 @@ label.coveo-slide-toggle-label {
 
         .toggle-label {
             margin-right: 20px;
-            vertical-align: -1px;
+            line-height: 20px;
         }
 
         button {
@@ -79,7 +79,7 @@ label.coveo-slide-toggle-label {
     button {
         border: none;
         cursor: pointer;
-        height: 19px;
+        height: 20px;
         width: 32px;
         position: relative;
 
@@ -107,6 +107,6 @@ label.coveo-slide-toggle-label {
     span.toggle-label {
         color: @block-text-color;
         font-size: 16px;
-        vertical-align: 2px;
+        vertical-align: text-top;
     }
 }
